# outlook-saver

./: .gitignore  README.md
.github/workflows/: release.yml
chrome-extension/: README.md  background.js  content_script.js  manifest.json  popup.html  popup.js
tauri/: package-lock.json
tauri/src/: index.html  main.js  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: auth.rs  config.rs  lib.rs  main.rs  saver.rs  watcher.rs
