[package]
name = "outlook-saver"
version = "0.1.0"
description = "Auto-download new Outlook emails and save them as .eml via a native Save dialog"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "outlook_saver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
oauth2 = { version = "4.4", features = ["reqwest"] }
tiny_http = "0.12"
url = "2"
base64 = "0.22"

# Mail
imap = "2.4"
native-tls = "0.2"
mailparse = "0.15"

# Storage / utils
keyring = { version = "3", features = ["apple-native", "windows-native"] }
directories = "5"
anyhow = "1"
log = "0.4"
chrono = "0.4"
